syntax = "proto3";
package service.chat;

import "service/chat/chat_info.proto";

message ChatRequest {
  ChatInfo chatInfo = 1;
  string body = 2;
}

message ChatResponse {
  ChatInfo chatInfo = 1;
  string body = 2;
  int64 timestamp_in_millis = 3;
}

message ChatResponseList {
  repeated ChatResponse list = 1;
}
