syntax = "proto3";
package service.chat;

message ChatInfo {
  string chat_id = 1;
  string sender_id = 2;
  string recipient_id = 3;
}

message ChatInfoList {
  repeated ChatInfo list = 1;
}